<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.veronezzi.riftlog.ui.home.HomeFragment"
        android:label="@string/nav_home">
        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/nav_slide_in_right"
            app:exitAnim="@anim/nav_slide_out_left"
            app:popEnterAnim="@anim/nav_slide_in_left"
            app:popExitAnim="@anim/nav_slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.veronezzi.riftlog.ui.profile.ProfileFragment"
        android:label="@string/nav_profile">
        <argument android:name="gameName" app:argType="string" />
        <argument android:name="tagLine" app:argType="string" />
        <argument android:name="platformRegion" app:argType="string" />
        <action
            android:id="@+id/action_profile_to_comparison"
            app:destination="@id/comparisonFragment"
            app:enterAnim="@anim/nav_slide_in_right"
            app:exitAnim="@anim/nav_slide_out_left"
            app:popEnterAnim="@anim/nav_slide_in_left"
            app:popExitAnim="@anim/nav_slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/comparisonFragment"
        android:name="com.veronezzi.riftlog.ui.comparison.ComparisonFragment"
        android:label="@string/nav_comparison">
        <argument android:name="gameName" app:argType="string" />
        <argument android:name="tagLine" app:argType="string" />
        <argument android:name="platformRegion" app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/matchHistoryFragment"
        android:name="com.veronezzi.riftlog.ui.matchhistory.MatchHistoryFragment"
        android:label="@string/nav_match_history">
        <action
            android:id="@+id/action_matchHistory_to_matchDetail"
            app:destination="@id/matchDetailFragment"
            app:enterAnim="@anim/nav_slide_in_right"
            app:exitAnim="@anim/nav_slide_out_left"
            app:popEnterAnim="@anim/nav_slide_in_left"
            app:popExitAnim="@anim/nav_slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/matchDetailFragment"
        android:name="com.veronezzi.riftlog.ui.matchdetail.MatchDetailFragment"
        android:label="@string/nav_match_detail">
        <argument android:name="matchId" app:argType="string" />
        <argument android:name="platformRegion" app:argType="string" />
        <argument android:name="puuid" app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/championStatsFragment"
        android:name="com.veronezzi.riftlog.ui.championstats.ChampionStatsFragment"
        android:label="@string/nav_champion_stats">
        <action
            android:id="@+id/action_championStats_to_championDetail"
            app:destination="@id/championDetailFragment"
            app:enterAnim="@anim/nav_slide_in_right"
            app:exitAnim="@anim/nav_slide_out_left"
            app:popEnterAnim="@anim/nav_slide_in_left"
            app:popExitAnim="@anim/nav_slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/buildsFragment"
        android:name="com.veronezzi.riftlog.ui.builds.BuildsFragment"
        android:label="@string/nav_builds">
        <action
            android:id="@+id/action_builds_to_championDetail"
            app:destination="@id/championDetailFragment"
            app:enterAnim="@anim/nav_slide_in_right"
            app:exitAnim="@anim/nav_slide_out_left"
            app:popEnterAnim="@anim/nav_slide_in_left"
            app:popExitAnim="@anim/nav_slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/championDetailFragment"
        android:name="com.veronezzi.riftlog.ui.championdetail.ChampionDetailFragment"
        android:label="@string/nav_champion_detail">
        <argument android:name="championId" app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.veronezzi.riftlog.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />

</navigation>
