<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rift_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_lg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_region_label"
            android:textAppearance="@style/TextAppearance.RiftTracker.LabelUppercase" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/regionChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            app:singleSelection="true"
            app:selectionRequired="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xl"
            android:text="@string/settings_save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearCacheButton"
            style="@style/Widget.RiftTracker.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/settings_clear_cache" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xl"
            android:text="@string/settings_riot_disclaimer"
            android:textAppearance="@style/TextAppearance.RiftTracker.BodySmall" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
