<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rift_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/sortChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_lg"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/sortByMastery"
                style="@style/Widget.RiftTracker.Chip.Region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/sort_by_mastery" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sortByWinrate"
                style="@style/Widget.RiftTracker.Chip.Region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/sort_by_winrate" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sortByGames"
                style="@style/Widget.RiftTracker.Chip.Region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/sort_by_games" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/championList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingStart="@dimen/spacing_lg"
            android:paddingEnd="@dimen/spacing_lg"
            android:paddingBottom="@dimen/spacing_lg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/skeletonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_lg"
        android:visibility="gone">

        <include layout="@layout/view_skeleton_row" />
        <include layout="@layout/view_skeleton_row" />
        <include layout="@layout/view_skeleton_row" />
        <include layout="@layout/view_skeleton_row" />
    </LinearLayout>

    <include
        android:id="@+id/emptyState"
        layout="@layout/view_empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>
